Refactor: 홈 랜딩 응답을 섹션 배열로 전환